--- a/code/text_analysis.ipynb
+++ b/code/text_analysis.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import nltk\n",
-    "import sklearn.feature_extraction.text as fe"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import sklearn.feature_extraction.text as fe\n",
+    "import nltk"
    ]
   },
   {
